added MultiCreateIssue, added event producer and some fixes
